# embed-link-generator

./: .env  Cargo.toml  LICENSE  README.md  config.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: rust.yml
src/: handlers.rs  main.rs  models.rs
src/handlers/: embeds.rs  errors.rs  mod.rs
src/models/: config.rs  embeds.rs  errors.rs  mod.rs
src/routes/: embeds.rs  mod.rs
src/tests/: errors.rs  mod.rs  routes.rs
