[package]
name = "embed-link-generator"
version = "1.0.0"
edition = "2021"
authors=["Aldas Mačius"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "tracing"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
axum = { version = "0.6.4", features = ["json", "query", "tower-log"] }
validator = { version = "0.16.0", features = ["derive"] }
dotenv = "0.15.0"
serde_with = "2.2.0"
ammonia = "3.3.0"
serde_urlencoded = "0.7.1"
serde_json = "1.0.92"
tower-http = { version = "0.3.5", features=["trace"] }
